horizontal scroll fix

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    padding: 20px;
+    
     overflow-x: hidden;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overscroll-behavior-y: none;
